discussion/kv_engine/186789/186789_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-55530 Expose compaction, checkpoint, filter stats

It is helpful to know the breakdown of total compactions done between
key index and seq index.

Bloom filter hit/miss lets us track its false positive rate.

CheckpointOverhead gives a measure of disk fragmentation due to keeping
older checkpoints in Magma.

Change-Id: I370347d48b32740fa9f19ab6d8e7b0a80f34d37f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2023-02-16 09:38:09.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-16 09:38:23.000000000
Message: 
Patch Set 3: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/338250/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-16 09:49:37.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1153/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:3042:18: error: no member named "ep_magma_checkpoint_overhead" in "cb::stats::Key" [clang-diagnostic-error]
    addStat(Key::ep_magma_checkpoint_overhead, "magma_CheckpointOverhead");
                 ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1153/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:3042:18:
error: no member named "ep_magma_checkpoint_overhead" in "cb::stats::Key" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1153/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1386/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/ep_engine.cc(3042): error C2838: "ep_magma_checkpoint_overhead": illegal qualified name in member declaration ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1386/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1115/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/ep_engine.cc:3042:18:
error: no member named "ep_magma_checkpoint_overhead" in "cb::stats::Key"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1115/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1181/ : FAILURE

Compile error at [2023-02-16T09:45:30.066Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/ep_engine.cc:3042:18:
error: ?ep_magma_checkpoint_overhead? is not a member of ?cb::stats::Key?; did you mean ?ep_magma_checkpoint_interval??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1181/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1180/ : FAILURE

Compile error at [2023-02-16T09:41:41.692Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/src/ep_engine.cc:3042:18:
error: ?ep_magma_checkpoint_overhead? is not a member of ?cb::stats::Key?; did you mean ?ep_magma_checkpoint_interval??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1180/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1170/ : FAILURE

Compile error at [2023-02-16T09:41:53.872Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/ep_engine.cc:3042:18:
error: ?ep_magma_checkpoint_overhead? is not a member of ?cb::stats::Key?; did you mean ?ep_magma_checkpoint_interval??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1170/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1178/ : FAILURE

Compile error at [2023-02-16T09:40:31.313Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/ep_engine.cc:3042:18:
error: no member named "ep_magma_checkpoint_overhead" in "cb::stats::Key"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1178/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1144/ : FAILURE

Compile error at [2023-02-16T09:42:12.931Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/ep_engine.cc:3042:18:
error: no member named "ep_magma_checkpoint_overhead" in "cb::stats::Key"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1144/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1171/ : FAILURE

Compile error at [2023-02-16T09:41:32.188Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/ep_engine.cc:3042:18:
error: no member named "ep_magma_checkpoint_overhead" in "cb::stats::Key"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1171/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1507/ : FAILURE

Compile error at [2023-02-16T09:43:20.127Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/ep_engine.cc:3042:18:
error: no member named "ep_magma_checkpoint_overhead" in "cb::stats::Key"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1507/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22730/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
